# sync-agent

./: .gitignore  installer.iss  launcher.py  layrd_sync.spec  pyproject.toml
.github/workflows/: build-windows.yml
layrd_sync/: __init__.py  autostart.py  database.py  heartbeat.py  main.py  remote_logging.py  settings_runner.py  setup_wizard.py  sync_engine.py  tray.py  updater.py  uploader.py  watcher.py
mock_update_server/: server.py
tests/: test_database.py
